--- a/docs/_includes/join-form.haml
+++ b/docs/_includes/join-form.haml
@@ -1,4 +1,4 @@
-%form.join-form.gradient-white.pos-rel.z-10.p-xlarge.p-l-xxlarge.p-r-xxlarge.radius6.elevation1.m-l-r-auto{action: '#', method: 'POST'}
+%form.join-form.join-form-fill.gradient-white.pos-rel.z-10.p-xlarge.p-l-xxlarge.p-r-xxlarge.radius6.elevation1.m-l-r-auto
   %header.text-center
     %h3.color-bunting.text-demi.no-margin.text-lg  Get Started. It’s FREE!
   .spacer32
@@ -25,7 +25,7 @@
     %button.btn.btn-static-primary.w100p{type: 'submit'}
       Join the program
 
-%form.join-form.join-form-validated.hidden
+%form.join-form.join-form-validated.gradient-white.pos-rel.z-10.p-xlarge.p-l-xxlarge.p-r-xxlarge.radius6.elevation1.m-l-r-auto.hidden
   %h3 Thank you !
   .spacer20
   %p.text-sm
