fix(wording): fixed case of DocSearch

--- a/docs/_includes/join-form.haml
+++ b/docs/_includes/join-form.haml
@@ -31,7 +31,7 @@
   %p.text-sm
     %b
       We'll review your request shortly,
-    after making sure your website is eligible to Docsearch.
+    after making sure your website is eligible to DocSearch.
   %p.text-sm
     This is a manual process and can take some time.
   %p.text-sm We'll then email you the code you need to integrate on your website
