fix footer style issue

--- a/docs/source/docsearch/assets/stylesheets/_documentation.scss
+++ b/docs/source/docsearch/assets/stylesheets/_documentation.scss
@@ -33,7 +33,8 @@
     position: relative;
     margin-left: 300px;
     margin-top: 56px;
-
+    min-height: calc(100vh - 250px);
+    
     @media (max-width: 768px) {
       width: 100%;
       margin-left: 0;
