integrate previous work
enhance tyle/content

reformat part 1

wait for review

--- a/docs/source/documentation/2-docsearch-scraper/1-overview.html.md.erb
+++ b/docs/source/documentation/2-docsearch-scraper/1-overview.html.md.erb
@@ -1,14 +1,16 @@
 ---
-title: Install
+title: DocSearch on your own infrastructure
 ---
 
-This is the repository for the scraper for the [DocSearch project](https://community.algolia.com/docsearch/).
-You can run it on your own, or [ask us](https://community.algolia.com/docsearch/) to crawl your documentation.
+In the regular use of DocSearch, you don't have to bother, we **handle the whole stack**.
 
+In some specific use case, you may want to look under the hood and DIY. This is welcome with DocSearch since every tool are open source.
 DocSearch is composed by 3 different projects:
-* The front-end of DocSearch: https://github.com/algolia/docsearch
-* The scraper which browses & indexes web pages: https://github.com/algolia/docsearch-scraper
-* The configurations for the scraper: https://github.com/algolia/docsearch-configs
+* [The front-end of DocSearch](https://github.com/algolia/docsearch)
+* [The scraper](https://github.com/algolia/docsearch-scraper) which browses & indexes web pages:
+* [The configurations repo](https://github.com/algolia/docsearch-configs) for the scraper.
+
+## The DocSearch backend: [our scraper](https://github.com/algolia/docsearch-scraper):
 
 This project is a collection of submodules, each one in its own directory:
 * cli: A command line tool to manage DocSearch. Run `./docsearch` and follow the steps
@@ -17,13 +19,14 @@ This project is a collection of submodules, each one in its own directory:
 * playground: An HTML page to easily test DocSearch indices
 * scraper: The core of the scraper. It reads the configuration file, fetches the web pages and indexes them in Algolia.
 
-## Install Docsearch
+## Install
+
 
 The DocSearch scraper is based on [Scrapy](https://scrapy.org), a famous python-based web scraper. Because it might need some JavaScript to render the pages it crawls, the scraper is also depending on [selenium](http://www.seleniumhq.org).
 
 To ease the setup process, a Docker container is provided to help you run the scraper.
 
-### Environment
+### Environment:
 
 - Install `python` & `pip`
   - `brew install python # will install pip`
@@ -33,11 +36,12 @@ To ease the setup process, a Docker container is provided to help you run the sc
 - `cd docsearch-scraper`
 - `pip install --user -r requirements.txt`
 
-### With docker
+### With docker:
 
 - Build the underlying Docker image: `./docsearch docker:build`
 
 ## Configure DocSearch
+
 
 You need to create an [Algolia account](https://www.algolia.com/users/sign_up) to get the `APPLICATION_ID` and (admin) `API_KEY` credentials the scraper will use to create the underlying indices.
 
@@ -72,19 +76,20 @@ Available commands:
 
 ## Use DocSearch
 
+
 ### Create a config
 
-To use DocSearch, the first thing you need is to create a crawler config. For more details about configs, check out [https://github.com/algolia/docsearch-configs](https://github.com/algolia/docsearch-configs), you'll have a list of options you can use and a lot of live and working examples.
+To use DocSearch, the first thing you need is to create a crawler config. For more details about configs, check out [our configuration repo](https://github.com/algolia/docsearch-configs), you'll have a list of options you can use and a lot of live and working examples.
 
 ### Crawl the website
 
-**With docker:**
+#### With docker:
 
 ```sh
 $ ./docsearch docker:run /path/to/your/config
 ```
 
-**Without docker:**
+#### Without docker
 
 ```sh
 $ ./docsearch run /path/to/your/config
@@ -119,7 +124,7 @@ To add the DocSearch dropdown menu to your website, add the following snippet to
 
 And you are good to go!
 
-### Specify appId
+### Specify your own appId
 
 If you are running the scraper on your own, you will need to tell the widget about your Algolia application ID via the `appId` parameter.
 
@@ -148,22 +153,22 @@ DEPLOY_KEY=
 
 The cli will then have more commands for you to run.
 
-For some actions like deploying you might need to use different credentials than the ones in the .env file.
+For some actions like deploying you might need to use different credentials than the ones in the _.env_ file.
 To do this you need to override them when running the cli tool:
 
 ```
-APPLICATION_ID= API_KEY= ./docsearch deploy:configs
+APPLICATION_ID=<your APPLICATION_ID> API_KEY=<your API_KEY> ./docsearch deploy:configs
 ```
 
 ## Run the tests
 
-### With docker
+### With docker:
 
 ```sh
 $ ./docsearch test
 ```
 
-### Without docker
+### Without docker:
 
 ```sh
 $ pip install pytest
