--- a/docs/source/documentation/3-docsearch-autocomplete/2-configuring-the-search.html.md.erb
+++ b/docs/source/documentation/3-docsearch-autocomplete/2-configuring-the-search.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Configuring the search
+title: Configuring the search results
 ---
 
 DocSearch is a wrapper around the [autocomplete.js](https://github.com/algolia/autocomplete.js) library that gets its
