update last link

--- a/docs/source/layouts/default.haml
+++ b/docs/source/layouts/default.haml
@@ -32,10 +32,10 @@
     %meta{property: 'og:type', content: 'website'}
 
     <!--[if IE]>
-    %link{rel: 'shortcut icon', href: '/img/favicon.png'}
+    %link{rel: 'shortcut icon', href: '/assets/images/favicon.png'}
     <![endif]-->
 
-    %link{rel: 'icon', href: 'img/favicon.png'}
+    %link{rel: 'icon', href: 'assets/images/favicon.png'}
     %link{rel: 'stylesheet', media: 'screen', href: 'assets/stylesheets/main.css'}
     %link{rel: 'stylesheet', href: 'https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css'}
 
