--- a/docs/source/documentation/2-docsearch-scraper/2-config-options.html.md.erb
+++ b/docs/source/documentation/2-docsearch-scraper/2-config-options.html.md.erb
@@ -73,10 +73,13 @@ You can pass either a string or an array of urls. The crawler will go to each
 page in order, following every link it finds on the page. It will only stop if
 the domain is outside of the `allowed_domains` or if the link is blacklisted in
 `stop_urls`.
-Note that it currently does not follow 301 redirects.
-This parameter also behave as [regular expression](https://en.wikipedia.org/wiki/Regular_expression). If you don't use a sitemap, you must define at least one reachable URL (HTTP 20x). Otherwise the scraper will not crawl your web site.
 
-You can build some more advanced URL. You will need to use object which have `variables` attribute. These variables will be injected into the URLs:
+Note that it currently does not follow 301 redirects.
+
+This parameter also behave as [regular expression](https://en.wikipedia.org/wiki/Regular_expression). If you don't use a sitemap, you must define at least one reachable URL (HTTP 20x). Otherwise the scraping will fail.
+
+You can build some more advanced URL. You will need to use JSON object which with `variables` attribute. This attribute is an array of variables that will be injected into the URLs:
+
 Example:
 ```json
 {
@@ -94,9 +97,10 @@ Example:
       ]
 }
 ```
-The whole pattern `(?P<version>.*?)` will be replaced by the value assigned in the related attribute `version`.
-  The variable name is not fixed. Please note that those varaible will behave as
- [`attributesForFaceting`](https://www.algolia.com/doc/api-reference/api-parameters/attributesForFaceting/) which [restrains the scope of the search from the snippet](https://www.algolia.com/doc/guides/searching/faceting/).
+The whole pattern `(?P<version>.*?)` will be replaced by the value assigned in the related key `version`.
+
+  The variable name is not fixed. Please note that those varaibles will behave as
+ [`attributesForFaceting`](https://www.algolia.com/doc/api-reference/api-parameters/attributesForFaceting/) which may help you [restraining the scope of the search from the snippet](https://www.algolia.com/doc/guides/searching/faceting/).
 
  Thus you can limit the scope of the search to the records from the pages encompassed by `http://example.com/docs/en/latest/*` thanks to the following snippet:
  ```js
@@ -112,7 +116,7 @@ The whole pattern `(?P<version>.*?)` will be replaced by the value assigned in t
 
 You can also defined some `tags` that will also behaves as [`attributesForFaceting`](https://www.algolia.com/doc/api-reference/api-parameters/attributesForFaceting/).
 
-In order to promote some result, you can set the `page_rank` attribute (default: 0, can be a positive or negative integer). It will impact the [ranking formula](https://www.algolia.com/doc/guides/ranking/ranking-formula/#ranking)
+In order to promote some result, you can set the `page_rank` attribute (default: `0`, can be a positive or negative integer). It will impact the [ranking formula](https://www.algolia.com/doc/guides/ranking/ranking-formula/#ranking)
 
 Finally if your layout is not consistent, you can define some specific `selectors` and apply them thanks to `selectors_key`:
 
@@ -152,54 +156,39 @@ Example:
 }
 ```
 
+### `scrape_start_urls`
+
+This boolean let you decide if you want to extract the content of the srating pages.
+
+Default is `false`
+
+### `stop_urls` _Optionnal_
+
+This array described the blacklisted URLs. The crawler will stop on these and will not consider their content. Likewise, if a link within
+a crawled webpage targets such pages, the crawler
+will not follow the link. You can use regular expression as well as plain urls.
+
+Note: It is sometimes needed to add `http://www.example.com/index.html` pages to
+the `stop_urls` list if you set `http://www.example.com` as a `start_urls`, to
+avoid duplicated content.
 
 ### `selectors` _Mandatory_
 
 This object contains all the CSS selectors that will be used to create the
 record hierarchy. It contains 6 levels (`lvl0`, `lvl1`, `lvl2`, `lvl3`, `lvl4`,
-`lvl5`) and `text`. You should fill at least the three first levels for better
-relevance.
+`lvl5`) and `text`.
 
 A default config would be to target the page `title` or `h1` as `lvl0`, the `h2`
 as `lvl1` and `h3` as `lvl2`. `text` is usually any `p` of text.
 
-### Sitemap crawling _Optional_
+We recommend you to fill at least the three first levels for better
+relevancy.
 
+### Global selectors _Optionnal_
 
-Our crawler offers you to crawl a site by discovering the URLs using Sitemaps. Thus, you will need to define the direct url(s) to your sitemap XML file, `sitemap_urls` , and then establish regex(s), `sitemap_urls_regexs` , which will match the URLs to crawl. Otherwise it will use the `start_urls` pattern in order to match the URLs available within the site map.
-
-For sites that use Sitemap index files that point to other sitemap files, all those sitemaps will be followed.
-
-###  `sitemap_urls`
-A list of urls pointing to the sitemaps (or sitemap index) you want to crawl. Must be provided if you want to discover though sitemap.
-
-###  `sitemap_urls_regexs`
-A list of regular expression that will be applied to each URL from the sitemap. If the pattern match an URL, this link will be scrapped. If none regular expressions is defined, the start_urls will be taken as pattern.
-
-###  `force_sitemap_urls_crawling`
-Specifies if matched URL should not respect the same rules as the hyperlink crawled. If set to true, each URL will be scraped no matter if it suited the `start_urls` or `stop_urls`. Default is `force_sitemap_urls_crawling` disabled
-
-### Example
-```json
-[...]
-"sitemap_urls": [
-    "https://www.mySite.com/sitemap.xml"
-  ],
-"": [
-    "/doc/"
-  ],
-"force_sitemap_urls_crawling": true,
-[...]
-```
-Given this configuration, each webpage whose the URL contains '/doc/' will be scrapped even if they don't complied the `start_urls` or `stop_urls`
-
-
-### Global selectors
-
-
-It's possible to make a selector global which means that all records for the page will have
+It's possible to make a selector global which means that all records from the page will have
 this value. This is useful when you have a title that is in the right sidebar and
-the sidebar is placed after the content in the dom.
+the sidebar is placed after the content in the DOM.
 
 ```json
 "selectors": {
@@ -210,10 +199,10 @@ the sidebar is placed after the content in the dom.
 }
 ```
 
-### Xpath selector
+### Xpath selector _Optionnal_
 
-By default `selectors` is considered to be a [css selector](https://www.w3schools.com/cssref/css_selectors.asp) but you can specify that a selector is a [xpath query](https://www.w3schools.com/xml/xpath_intro.asp).
-This is useful when you want to do more complex selection like selecting the parent of a node.
+By default `selectors` are considered to be [css selectors](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors) but you can specify that a selector is a [XPath one](https://developer.mozilla.org/en-US/docs/Web/XPath).
+This is useful when you want to do more complex selection like selecting the parent of a targetting.
 
 ```json
 "selectors": {
@@ -224,10 +213,9 @@ This is useful when you want to do more complex selection like selecting the par
 }
 ```
 
-### Default value
+### Default value _Optionnal_
 
-You have the possibility to add a default value. If the given selector doesn't match anything in a page
-then for each record the default value will be set
+You have the possibility to add a default value which will be used if the selctor doesn't match anything.
 
 ```json
 "selectors": {
@@ -238,9 +226,97 @@ then for each record the default value will be set
 }
 ```
 
-### Strip Chars
 
-You can override the default `strip_chars` per level
+### `selectors_exclude` _Optionnal_
+
+By default, the `selectors` search is applied page-wide. If there are some parts
+of the page that you do not want to include (e.g. a table of content, a sidebar or a footer),
+you can add them to the `selectors_exclude` key.
+
+### Sitemap crawling _Optional_
+
+Our crawler offers you to crawl a site by discovering the URLs using Sitemaps. Thus, you will need to define the direct url(s) to your sitemap XML file, `sitemap_urls` , and then establish regex(s), `sitemap_urls_regexs` , which will match the URLs to crawl. Otherwise it will use the `start_urls` pattern in order to match the URLs available within the site map.
+
+For sites that use Sitemap index files that point to other sitemap files, all those sitemaps will be followed.
+
+###  `sitemap_urls` _Optional_
+A list of urls pointing to the sitemaps (or sitemap index) you want to crawl. Must be provided if you want to discover though sitemap.
+
+###  `sitemap_urls_regexs` _Optional_
+A list of regular expression that will be applied to each URL from the sitemap. If the pattern match an URL, this link will be scrapped. If none regular expressions is defined, the start_urls will be taken as pattern.
+
+###  `force_sitemap_urls_crawling` _Optional_
+Specifies if the matched URLs should not respect the same rules as the hyperlink crawled. If set to true, each URL will be scraped no matter if it suited the `start_urls` or `stop_urls`. Default is `force_sitemap_urls_crawling` set to `false`
+
+### Example
+```json
+{
+    [...]
+    "sitemap_urls": [
+      "https://www.mySite.com/sitemap.xml"
+    ],
+    "sitemap_urls_regexs": [
+      "/doc/"
+    ],
+    "force_sitemap_urls_crawling": true,
+    [...]
+}
+```
+Given this configuration, each webpage whose the URL contains '/doc/' will be scrapped even if they don't complied the `start_urls` or `stop_urls`
+
+### `allowed_domains` _Optional_
+
+You can pass an array of strings. This is the whitelist of
+domains the crawler will browse. If a link targets a page that is not in the
+whitelist, the crawler will not follow it.
+
+Default is the domain of the first elements in the `start_urls`
+
+### `min_indexed_level` _Optional_
+
+Lets you define the minimum level at which you want a record to be indexed. For
+example, with a `min_indexed_level: 1`, you will only index records that have at
+least a `lvl1` field.
+
+This is especially useful when the documentation is split into several pages,
+but all pages duplicates the main title or introduction (see [this issue][1]).
+
+Default to `0`
+
+### `only_content_level` _Optional_
+
+This attribute allow you to only indexed records which matches the `text` selectos. Every other records will be skipped.
+
+Default to `false`
+
+### `js_render` _Optional_
+
+The HTML code that we crawl is sometimes generated using Javascript. In those
+cases, the `js_render` option must be set to `true`. It will enable our
+internal proxy (Selenium) to render pages before crawling them.
+
+This parameter is optional and is set to `false` by default. We higly recommend to avoid doing client-side rendering. It mainly decreases the performances of your website.
+
+### `js_wait` _Optional_
+
+The `js_wait` parameter lets you change the default waiting time (in seconds) to render the
+webpage with the Selenium emulator.
+
+This parameter is optional and is set to `0s` by default.
+
+### `use_anchors` _Optional_
+
+The `use_anchors` is need to be set to True for javascript doc when the hash is
+used to route the query. Internally this will disable the canonicalize feature that
+is removing the hash from the url.
+
+This parameter is optional and is set to `false` by default.
+
+### `strip_chars` _Optional_
+
+A list of character to remove from the text that is indexed.
+
+You can also override the default `strip_chars` per level
 
 ```json
 "selectors": {
@@ -251,92 +327,19 @@ You can override the default `strip_chars` per level
 }
 ```
 
-### `allowed_domains`
-
-You can pass an array of strings. This is the whitelist of
-domains the crawler will browse. If a link targets a page that is not in the
-whitelist, the crawler will not follow it.
-
-Default is the domain of the first element in the `start_urls`
-
-### `stop_urls`
-
-This is the blacklist of urls on which the crawler should stop. If a link in
-a crawled webpage targets one the elements in the `stop_urls` list, the crawler
-will not follow the link.
-
-Note that you can use regexps as well as plain urls.
-
-Note: It is sometimes needed to add `http://www.example.com/index.html` pages to
-the `stop_urls` list if you set `http://www.example.com` as a `start_urls`, to
-avoid duplicated content.
-
-### `selectors_exclude`
-
-By default, the `selectors` search is applied page-wide. If there are some parts
-of the page that you do not want to include (like a header, sidebar or footer),
-you can add them to the `selectors_exclude` key.
-
-### `custom_settings`
-
-This object is any custom Algolia settings you would like to pass to the index
-settings.
-
-### `min_indexed_level`
-
-Lets you define the minimum level at which you want records to be indexed. For
-example, with a `min_indexed_level: 1`, you will only index records that have at
-least a `lvl1` field.
-
-This is especially useful when the documentation is split into several pages,
-but all pages duplicates the main title (see [this issue][1]).
-
-### `js_render`
-
-The HTML code that we crawl is sometimes generated using Javascript. In those
-cases, the `js_render` option must be set to `true`. It will enable our
-internal proxy (Selenium) to render pages before crawling them.
-
-This parameter is optional and is set to `false` by default.
-
-### `js_wait`
-
-The `js_wait` parameter lets you change the default waiting time to render the
-webpage with the Selenium proxy.
-
-This parameter is optional and is set to `0`s by default.
-
-### `use_anchors`
-
-The `use_anchors` is need to be set to True for javascript doc when the hash is
-used to route the query. Internally this will disable the canonicalize feature that
-is removing the hash from the url.
-
-This parameter is optional and is set to False by default.
-
-### `strip_chars`
-
-A list of character to remove from the text that is indexed.
-
 Default is `" .,;:§¶"`
 
-### `scrape_start_urls`
+### `nb_hits` _Mandatory_
 
-Default is `false`
+Each time that the configuration is locally run, this attribute is set to the number of records indexed.
 
-### `remove_get_params`
-
-Default is `false`
-
-### `strict_redirect`
-
-Default is `false`
-
-### `nb_hits`
-
-The number of object that should be indexed. Only used by the [`checker`](#checker).
-
+Such attribute is used for monitoring purposed. We keep a track of its evolution in order to detect main changes.
 Default is `0`.
+
+### `custom_settings` _Optional_
+
+This object is any custom Algolia settings you would like to pass to the index
+settings. You will [look under the hood of algolia](https://www.algolia.com/doc/).
 
 ## Possible issues
 
