proofread documentation/docsearch

--- a/docs/source/documentation/1-docsearch/1-introduction.html.md.erb
+++ b/docs/source/documentation/1-docsearch/1-introduction.html.md.erb
@@ -11,13 +11,14 @@ share it with the world.
 
 
 DocSearch will provide, for free and out of the box, the Algolia search
-experience for your documenation website. You only need to [ask us to configure
+experience for your documentation website. You only need to [ask us to configure
 your site](https://community.algolia.com/docsearch/) or
 [submit you own configuration](https://github.com/algolia/docsearch-configs). We'll
- get back to you with what you need to integrate your new search into your website.
+get back to you with what you need to integrate your new search into your website.
 
  1. We'll **configure** your search experience,
  2. We'll **crawl** and **scrap** your documentation pages every 24h accordingly,
- 3. You'll only need to **add few lines to your website**: a Javascript snippet along with 2 librairies (JS & CSS).
+ 3. You'll only need to **add few lines to your website**: a Javascript snippet along with 2 libraries (JS & CSS).
 
- **NB:** If you prefer to DIY, you can [run the scraper](https://github.com/algolia/docsearch-scraper) in your own infra. Feel free to fork!
+ **NB:** If you prefer to DIY, you can [run the scraper](https://github.com/algolia/docsearch-scraper)
+ in your own infra. Feel free to fork!
