--- a/docs/source/documentation/3-docsearch-autocomplete/1-customize-autocomplete-styles.html.md.erb
+++ b/docs/source/documentation/3-docsearch-autocomplete/1-customize-autocomplete-styles.html.md.erb
@@ -5,7 +5,7 @@ title: Customize autocomplete styles
 ## Attribution
 
 We're happy to provide DocSearch free of charge for your site, and you're
-welcome to customise that experience in a way that works for you; all we ask is
+welcome to customize that experience in a way that works for you; all we ask is
 that Algolia be attributed within the search context. For example, in the
 default implementation, we place a small "Search by Algolia" logo in the
 corner. If you prefer to roll your own UX, you'll need to make sure that this
@@ -15,7 +15,7 @@ logo is included in your implementation as well.
 
 The default colorscheme is white and gray:
 
-[Default colorscheme](https://community.algolia.com/docsearch/assets/images/default-colorscheme.png)
+![Default colorscheme](https://community.algolia.com/docsearch/assets/images/default-colorscheme.png)
 
 To update the colors to suit your website, you just need to override a few
 colors. Here is an example of a CSS file that you can use as a basis to
