--- a/docs/source/documentation/1-docsearch/3-recommendations.html.md.erb
+++ b/docs/source/documentation/1-docsearch/3-recommendations.html.md.erb
@@ -10,7 +10,7 @@ You can also have a look at our [blog that discusses the pitfalls and recommenda
 For DocSearch to work, your **documentation** must be structured in a certain way. Structure reflects **clarity**, **exactness**, and **steadiness**. A helpful document will always have an understandable structure in one glance.
 It allows a user to get the ins and outs of the information and to quickly assimilate the **context**. It will help her/him to establish the **potential relevancy** of the document regarding her/his **intent**.
 
-Last but not least the structure introduces a lot of meta information that are game changers at indexing time, such as **document hierarchy** or the use of [facets](#).
+Last but not least the structure introduces a lot of meta information that are game changers at indexing time, such as **document hierarchy** or the use of [facets](https://www.algolia.com/doc/guides/searching/faceting/#faceting-overview).
 
 ## Document hierarchy
 
@@ -24,11 +24,11 @@ For large documents, we usually recommend having 4 levels (from lvl0 until lvl3)
 Three different levels should be the minimum.
 
 The **depth** of a record is also really enlightening.
-It will be considered within our [ranking formula](#) thanks to the [attributeToIndex](#) settings.
+It will be considered within our [ranking formula](https://www.algolia.com/doc/guides/ranking/ranking-formula/) thanks to the [attributeToIndex](https://www.algolia.com/doc/api-reference/api-parameters/searchableAttributes/) settings.
 Definitely the higher up the content is, the more impact it will have.
 
 In order to deliver the best user experience, it is key to open the page at the exact position of the match.
-The location of the match is easier to find in a **fragmented** document thanks to anchors (#).
+The location of the match is easier to find in a **fragmented** document thanks to anchors.
 This hierarchy must be total and complete in order to be meaningful,
 this is why you should try to avoid heterogeneity.
 
@@ -69,7 +69,7 @@ the catch-all document may be **confusing** and **counterproductive**.
 
 Last but not least duplicates introduce noise and mislead users. This is why
 you should always focus on the relevant content and avoid duplicating content
-within your site (e.g. [landing page which contains all of the information](#scrap_start_urls), summing up, etc.).
+within your site (e.g. landing page which contains all of the information, summing up, etc.).
 In cases where the duplicates's existence is expected since it belongs to another
 dataset (e.g. a different version), you should use [facets](https://www.algolia.com/doc/guides/searching/faceting/).
 
@@ -81,11 +81,11 @@ What is clearly thought out is clearly and concisely expressed.
 
 Since every documentation should be complete, the search experience must **cover the whole of it**.
 By default our scraper is crawling your website: it **follows hyperlinks referenced** from the scraped pages.
-If these links point to a page which belongs to the [allowed domain](#),
+If these links point to a page which belongs to the allowed domain,
 this precise page will be scraped, crawled and so forth.
 This **de facto discovery** is really practical but not exhaustive enough.
 If for any reason, a webpage could not be referenced from another covered one,
-the scope of the search will be imperfect. 
+the scope of the search will be imperfect.
 For those reasons we highly recommend that you use a **Sitemap** (#).
 This lists every page of your web site and will be used as the **main source of truth**
 and it will define the roadmap of our scraping.
